[gd_scene load_steps=10 format=3 uid="uid://bskbekfefr7pk"]

[ext_resource type="Texture2D" uid="uid://c1u3yclhokc8d" path="res://assets/images/ui/pen.png" id="1_34rg7"]
[ext_resource type="Script" path="res://scripts/game/game_controller.gd" id="1_msol3"]
[ext_resource type="Script" path="res://scripts/game/game_display.gd" id="2_164cl"]
[ext_resource type="Texture2D" uid="uid://ci2ktktlqtrue" path="res://assets/images/ui/loader/loader.svg" id="2_roguu"]
[ext_resource type="Script" path="res://scripts/loader/loader.gd" id="3_cd2k8"]
[ext_resource type="Script" path="res://scripts/game/endgame.gd" id="6_ho0pe"]
[ext_resource type="FontFile" uid="uid://d1vfx271ou42p" path="res://assets/fonts/roboto/roboto-bold.ttf" id="6_midn7"]
[ext_resource type="Script" path="res://scripts/game/pre_start.gd" id="8_yk65j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqajt"]
bg_color = Color(1, 1, 1, 0.898039)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0823529, 0.0823529, 0.12549, 0.823529)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[node name="GameController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_msol3")

[node name="GameDisplay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_164cl")

[node name="OppData" type="Panel" parent="GameDisplay"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 279.0
offset_bottom = 80.0

[node name="DataContainer" type="HBoxContainer" parent="GameDisplay/OppData"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -29.5
offset_right = 129.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2

[node name="VContainer" type="VBoxContainer" parent="GameDisplay/OppData/DataContainer"]
layout_mode = 2
offset_right = 123.0
offset_bottom = 60.0
grow_vertical = 2
alignment = 1

[node name="HContainer" type="HBoxContainer" parent="GameDisplay/OppData/DataContainer/VContainer"]
layout_mode = 2
offset_right = 123.0
offset_bottom = 28.0

[node name="Name" type="Label" parent="GameDisplay/OppData/DataContainer/VContainer/HContainer"]
layout_mode = 2
offset_right = 97.0
offset_bottom = 28.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "OppUsername
"
vertical_alignment = 1

[node name="Pen" type="TextureRect" parent="GameDisplay/OppData/DataContainer/VContainer/HContainer"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
offset_left = 101.0
offset_right = 123.0
offset_bottom = 28.0
texture = ExtResource("1_34rg7")
ignore_texture_size = true
stretch_mode = 5

[node name="Elo" type="Label" parent="GameDisplay/OppData/DataContainer/VContainer"]
layout_mode = 2
offset_top = 32.0
offset_right = 123.0
offset_bottom = 60.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "1200"
vertical_alignment = 1

[node name="Time" type="Label" parent="GameDisplay/OppData/DataContainer"]
layout_mode = 2
offset_left = 127.0
offset_top = 5.0
offset_right = 258.0
offset_bottom = 54.0
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 32
text = "00.0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Board" type="Panel" parent="GameDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.0
offset_top = -266.0
offset_right = 266.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="GridContainer" parent="GameDisplay/Board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -228.0
offset_right = 228.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="Button0" type="Button" parent="GameDisplay/Board/Grid"]
layout_mode = 2
offset_right = 146.0
offset_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.54902, 0.886275, 1, 1)
theme_override_colors/font_pressed_color = Color(0.709804, 0.92549, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 72
text = "X"

[node name="Button1" type="Button" parent="GameDisplay/Board/Grid"]
layout_mode = 2
offset_left = 156.0
offset_right = 301.0
offset_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.54902, 0.886275, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 72

[node name="Button2" type="Button" parent="GameDisplay/Board/Grid"]
layout_mode = 2
offset_left = 311.0
offset_right = 456.0
offset_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.54902, 0.886275, 1, 1)
theme_override_colors/font_pressed_color = Color(0.709804, 0.92549, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 72
text = "X"

[node name="Button3" type="Button" parent="GameDisplay/Board/Grid"]
layout_mode = 2
offset_top = 156.0
offset_right = 146.0
offset_bottom = 301.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.380392, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 72
text = "O"

[node name="Button4" type="Button" parent="GameDisplay/Board/Grid"]
layout_mode = 2
offset_left = 156.0
offset_top = 156.0
offset_right = 301.0
offset_bottom = 301.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.54902, 0.886275, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 72
text = "X"

[node name="Button5" type="Button" parent="GameDisplay/Board/Grid"]
layout_mode = 2
offset_left = 311.0
offset_top = 156.0
offset_right = 456.0
offset_bottom = 301.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.380392, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(1, 0.533333, 0.694118, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 72
text = "O"

[node name="Button6" type="Button" parent="GameDisplay/Board/Grid"]
layout_mode = 2
offset_top = 311.0
offset_right = 146.0
offset_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.380392, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 72
text = "O"

[node name="Button7" type="Button" parent="GameDisplay/Board/Grid"]
layout_mode = 2
offset_left = 156.0
offset_top = 311.0
offset_right = 301.0
offset_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.54902, 0.886275, 1, 1)
theme_override_colors/font_pressed_color = Color(0.709804, 0.92549, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 72
text = "X"

[node name="Button8" type="Button" parent="GameDisplay/Board/Grid"]
layout_mode = 2
offset_left = 311.0
offset_top = 311.0
offset_right = 456.0
offset_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.380392, 0.517647, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 72
text = "O"

[node name="Lines" type="Control" parent="GameDisplay/Board"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_top = 38.0
offset_right = -36.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2

[node name="Line0" type="Control" parent="GameDisplay/Board/Lines"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 0
offset_right = 456.0
offset_bottom = 145.333

[node name="Panel" type="Panel" parent="GameDisplay/Board/Lines/Line0"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -16.6665
offset_right = 438.0
offset_bottom = 16.3335
theme_override_styles/panel = SubResource("StyleBoxFlat_tqajt")

[node name="Line1" type="Control" parent="GameDisplay/Board/Lines"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 0
offset_top = 155.333
offset_right = 458.0
offset_bottom = 300.666

[node name="Panel" type="Panel" parent="GameDisplay/Board/Lines/Line1"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -16.6665
offset_right = 438.0
offset_bottom = 16.3335
theme_override_styles/panel = SubResource("StyleBoxFlat_tqajt")

[node name="Line2" type="Control" parent="GameDisplay/Board/Lines"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 0
offset_top = 310.666
offset_right = 458.0
offset_bottom = 455.999

[node name="Panel" type="Panel" parent="GameDisplay/Board/Lines/Line2"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -16.6665
offset_right = 438.0
offset_bottom = 16.3335
theme_override_styles/panel = SubResource("StyleBoxFlat_tqajt")

[node name="Line3" type="Control" parent="GameDisplay/Board/Lines"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 0
offset_left = 146.0
offset_right = 602.0
offset_bottom = 145.333
rotation = 1.5708

[node name="Panel" type="Panel" parent="GameDisplay/Board/Lines/Line3"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -16.6665
offset_right = 438.0
offset_bottom = 16.3335
theme_override_styles/panel = SubResource("StyleBoxFlat_tqajt")

[node name="Line4" type="Control" parent="GameDisplay/Board/Lines"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 0
offset_left = 301.0
offset_right = 759.0
offset_bottom = 145.333
rotation = 1.5708

[node name="Panel" type="Panel" parent="GameDisplay/Board/Lines/Line4"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -16.6665
offset_right = 438.0
offset_bottom = 16.3335
theme_override_styles/panel = SubResource("StyleBoxFlat_tqajt")

[node name="Line5" type="Control" parent="GameDisplay/Board/Lines"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 0
offset_left = 456.0
offset_right = 914.0
offset_bottom = 145.333
rotation = 1.5708

[node name="Panel" type="Panel" parent="GameDisplay/Board/Lines/Line5"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -16.6665
offset_right = 438.0
offset_bottom = 16.3335
theme_override_styles/panel = SubResource("StyleBoxFlat_tqajt")

[node name="Line6" type="Control" parent="GameDisplay/Board/Lines"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 0
offset_left = 53.0
offset_top = -50.0
offset_right = 694.0
offset_bottom = 95.0
rotation = 0.785398

[node name="Panel" type="Panel" parent="GameDisplay/Board/Lines/Line6"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -20.5
offset_right = -32.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tqajt")

[node name="Line7" type="Control" parent="GameDisplay/Board/Lines"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 0
offset_left = 506.0
offset_top = 53.0
offset_right = 1147.0
offset_bottom = 198.0
rotation = 2.35619

[node name="Panel" type="Panel" parent="GameDisplay/Board/Lines/Line7"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -20.5
offset_right = -32.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tqajt")

[node name="PlayerData" type="Panel" parent="GameDisplay"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -279.0
offset_top = -80.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0

[node name="DataContainer" type="HBoxContainer" parent="GameDisplay/PlayerData"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -29.5
offset_right = 128.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Time" type="Label" parent="GameDisplay/PlayerData/DataContainer"]
layout_mode = 2
offset_top = 5.0
offset_right = 126.0
offset_bottom = 54.0
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 32
text = "00.0"
vertical_alignment = 1

[node name="VContainer" type="VBoxContainer" parent="GameDisplay/PlayerData/DataContainer"]
layout_mode = 2
offset_left = 130.0
offset_right = 256.0
offset_bottom = 60.0
grow_vertical = 2
alignment = 1

[node name="HContainer" type="HBoxContainer" parent="GameDisplay/PlayerData/DataContainer/VContainer"]
layout_mode = 2
offset_right = 126.0
offset_bottom = 28.0
alignment = 1

[node name="Pen" type="TextureRect" parent="GameDisplay/PlayerData/DataContainer/VContainer/HContainer"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
offset_right = 22.0
offset_bottom = 28.0
texture = ExtResource("1_34rg7")
ignore_texture_size = true
stretch_mode = 5

[node name="Name" type="Label" parent="GameDisplay/PlayerData/DataContainer/VContainer/HContainer"]
layout_mode = 2
offset_left = 26.0
offset_right = 126.0
offset_bottom = 28.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "YourUsername
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Elo" type="Label" parent="GameDisplay/PlayerData/DataContainer/VContainer"]
layout_mode = 2
offset_top = 32.0
offset_right = 126.0
offset_bottom = 60.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "1200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Resign" type="Button" parent="GameDisplay"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -212.0
offset_top = 8.0
offset_right = -12.0
offset_bottom = 88.0
grow_horizontal = 0
theme_type_variation = &"LightButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 42
text = "Resign"

[node name="Loader" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BasePanel"

[node name="Loader" type="TextureRect" parent="Loader"]
self_modulate = Color(0.537255, 0.862745, 0.921569, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -126.0
offset_right = 126.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
rotation = 6.2649
pivot_offset = Vector2(128, 128)
texture = ExtResource("2_roguu")
script = ExtResource("3_cd2k8")

[node name="Endgame" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"TransparentPanel"
script = ExtResource("6_ho0pe")

[node name="Container" type="VBoxContainer" parent="Endgame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -343.0
offset_top = -376.0
offset_right = 343.0
offset_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="Endgame/Container"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
offset_top = 251.0
offset_right = 686.0
offset_bottom = 401.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.788235)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_midn7")
theme_override_font_sizes/font_size = 22
text = "label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ok" type="Button" parent="Endgame/Container"]
custom_minimum_size = Vector2(120, 67)
layout_mode = 2
offset_left = 283.0
offset_top = 433.0
offset_right = 403.0
offset_bottom = 500.0
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 42
text = "Ok"

[node name="PreStart" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_yk65j")

[node name="Container" type="VBoxContainer" parent="PreStart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -343.0
offset_top = -376.0
offset_right = 343.0
offset_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -30
alignment = 1

[node name="Label" type="Label" parent="PreStart/Container"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
offset_top = 209.0
offset_right = 686.0
offset_bottom = 359.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.788235)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_midn7")
theme_override_font_sizes/font_size = 94
text = "You are"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sign" type="Label" parent="PreStart/Container"]
custom_minimum_size = Vector2(0, 213)
layout_mode = 2
offset_top = 329.0
offset_right = 686.0
offset_bottom = 542.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.54902, 0.886275, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.788235)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("6_midn7")
theme_override_font_sizes/font_size = 170
text = "X"
horizontal_alignment = 1
vertical_alignment = 1
